fix(Form): Wrong alignment for close properties
* Fixed Tags, Updated Tests
* modified code for cursor
* Fixed moving of close icon
* Fixed styles and lints

fix: https://github.com/KaotoIO/kaoto/issues/1839

--- a/packages/ui/src/components/Visualization/Canvas/Form/CanvasFormHeader.scss
+++ b/packages/ui/src/components/Visualization/Canvas/Form/CanvasFormHeader.scss
@@ -35,3 +35,11 @@
     --pf-v6-c-toggle-group__button--PaddingLeft: 0.25rem;
   }
 }
+
+.canvas-header-close {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
+  padding-right: 0;
+}
